--- a/MELD/1.smaller-datasets.ipynb
+++ b/MELD/1.smaller-datasets.ipynb
@@ -15,12 +15,34 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f",
-   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')"
+   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
+   "language": "python"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'erc'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b3d24d051b09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0merc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'erc'"
+     ]
+    }
+   ],
+   "source": [
+    "import erc"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
